--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/responsivo.css">
   
   <title>Frontend Mentor | Order summary card</title>
 
@@ -24,18 +25,21 @@
         </p>
       </div>
       <div class="card-musica">
-        <div class="card-musica-nome">
-          <p>
-            Annual Plan
-            $59.99/year
-          </p>
-        
+        <!-- <img src="images/icon-music.svg" alt=""> -->
+        <div class="card-musica-informacoes">
+          <img src="images/icon-music.svg" alt="">
+            <div class="musica-informacoes">
+              <p>Annual Plan</p>
+              <span>$59.99/year</span>
+            </div>
+            <!-- <span>Change</span> -->
+          
         </div>
-        <span>Change</span>
+        <a href=""><span>Change</span></a>
       </div>
-      <div>
-        Proceed to Payment
-        Cancel Order
+      <div class="butao">
+        <p class="decoração-butao">Proceed to Payment</p>
+        <span>Cancel Order</span>
       </div>
     </section>
   </main>
