--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/responsivo.css">
-  
+
   <title>Frontend Mentor | Order summary card</title>
 
 </head>
+
 <body>
 
   <main class="cont">
@@ -25,15 +28,14 @@
         </p>
       </div>
       <div class="card-musica">
-        <!-- <img src="images/icon-music.svg" alt=""> -->
+
         <div class="card-musica-informacoes">
           <img src="images/icon-music.svg" alt="">
-            <div class="musica-informacoes">
-              <p>Annual Plan</p>
-              <span>$59.99/year</span>
-            </div>
-            <!-- <span>Change</span> -->
-          
+          <div class="musica-informacoes">
+            <p>Annual Plan</p>
+            <span>$59.99/year</span>
+          </div>
+
         </div>
         <a href=""><span>Change</span></a>
       </div>
@@ -43,10 +45,11 @@
       </div>
     </section>
   </main>
-  
+
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
 </body>
+
 </html>
